--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,6 +3,7 @@
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
+
 .app {
   text-align: center;
 }
@@ -11,6 +12,12 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 1.5rem;
+  background: rgba(255, 255, 255, 0.7);
+  background-size: 4px 4px;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  position: fixed;
+  width: -webkit-fill-available;
 }
 .logo {
   display: flex;
@@ -75,26 +82,13 @@
   opacity: 0.15;
 }
 
-@media screen and (max-width: 800px) {
-  .main {
-    padding: 0;
-  }
-  .title span {
-    font-size: 1rem;
-    color: #ff0c00;
-  }
-}
 .title span {
   font-size: 4rem;
   font-weight: 800;
   font-family: "Roboto", sans-serif;
   color: black;
 }
-.grad1 {
-  background: radial-gradient(#ff0c00, #ff00dd, #1324f5);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+
 .grad2 {
   background: radial-gradient(#ff0c00, #40f513);
   -webkit-background-clip: text;
@@ -214,16 +208,19 @@
   }
   .dropdown {
     height: 140px;
+    box-shadow: 0px 1px 0px 0px grey;
     width: 200px;
-    border-radius: 1vh;
+    border: 1px solid #bbb1b15c;
     position: absolute;
-    background-color: rgb(223, 231, 213);
+    background-color: rgb(255 254 254);
     top: 63px;
     border-radius: 1vh;
     right: 20px;
     justify-content: space-around;
     display: flex;
     flex-direction: column;
+    position: absolute;
+    z-index: 2;
     flex-wrap: wrap;
     font-family: "Poppins", sans-serif;
   }
@@ -275,11 +272,14 @@
   p {
     font-family: "Roboto", sans-serif;
     font-size: 2em;
-    span {
-      background: radial-gradient(#ff0c00, #ff00dd, #1324f5);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+  }
+  .text-prompt {
+    height: 200px;
+    width: 95%;
+  }
+  .text-tag {
+    height: 100px;
+    width: 95%;
   }
   .tag {
     h3 {
@@ -344,13 +344,16 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(189, 171, 171, 0.3);
     padding: 0.7%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     h1 {
       margin: 1px;
       font-family: "Roboto", sans-serif;
     }
     p {
       margin: 1px;
-      width: 320px;
+      width: 280px;
       font-weight: 300;
       font-family: "Poppins", sans-serif;
     }
@@ -359,7 +362,7 @@
       align-items: center;
       display: flex;
       gap: 10px;
-
+      margin-bottom: 10px;
       img {
         width: 40px;
         border-radius: 5vh;
@@ -394,4 +397,234 @@
     }
   }
 }
+.grad3 {
+  //  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #fa4141 0%,
+    #47f1e3 29%,
+    #f713ff 67%,
+    #7b1be9 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2.5s linear infinite;
+  // display: inline-block;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
 // edit
+@media screen and (max-width: 800px) {
+  .main {
+    padding: 0;
+  }
+  .title span {
+    font-size: 1rem;
+    color: #ff0c00;
+  }
+  br {
+    display: none !important;
+  }
+  .title h1 span {
+    font-size: 2rem !important;
+    text-align: center;
+  }
+  .feed {
+    gap: 12px !important;
+    margin-left: -8px;
+  }
+  .prompt {
+    padding: 10px !important;
+  }
+  .form {
+    h1 {
+      font-size: 3rem !important;
+    }
+    p {
+      font-size: 1.3rem;
+      width: 95%;
+      text-align: justify;
+    }
+  }
+}
+
+.Search {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2vh;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.16);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.3px);
+  width: 400px;
+  -webkit-backdrop-filter: blur(8.3px);
+  border: 1px solid rgba(235, 235, 243, 0.3);
+  .search-bar {
+    display: flex;
+  }
+  button,
+  input {
+    font: 1em Hind, sans-serif;
+    line-height: 1.5em;
+  }
+  input {
+    color: #171717;
+  }
+  .search-bar input,
+  .search-btn,
+  .search-btn:before,
+  .search-btn:after {
+    transition: all 0.25s ease-out;
+  }
+  .search-bar input,
+  .search-btn {
+    width: 3em;
+    height: 3em;
+  }
+  .search-bar input:invalid:not(:focus),
+  .search-btn {
+    cursor: pointer;
+  }
+  .search-bar,
+  .search-bar input:focus,
+  .search-bar input:valid {
+    width: 100%;
+  }
+  .search-bar input:focus,
+  .search-bar input:not(:focus) + .search-btn:focus {
+    outline: transparent;
+  }
+  .search-bar {
+    margin: auto;
+    padding: 0.5em;
+    justify-content: center;
+    max-width: 30em;
+  }
+  .search-bar input {
+    background: transparent;
+    border-radius: 1.5em;
+    box-shadow: 0 0 0 0.4em #171717 inset;
+    padding: 0.75em;
+    transform: translate(0.5em, 0.5em) scale(0.5);
+    transform-origin: 100% 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+  .search-bar input::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  .search-bar input:focus,
+  .search-bar input:valid {
+    background: #fff;
+    border-radius: 0.375em 0 0 0.375em;
+    box-shadow: 0 0 0 0.1em #d9d9d9 inset;
+    transform: scale(1);
+  }
+  .search-btn {
+    background: #171717;
+    border-radius: 0 0.75em 0.75em 0 / 0 1.5em 1.5em 0;
+    padding: 0.75em;
+    position: relative;
+    transform: translate(0.25em, 0.25em) rotate(45deg) scale(0.25, 0.125);
+    transform-origin: 0 50%;
+  }
+  .search-btn:before,
+  .search-btn:after {
+    content: "";
+    display: block;
+    opacity: 0;
+    position: absolute;
+  }
+  .search-btn:before {
+    border-radius: 50%;
+    box-shadow: 0 0 0 0.2em #f1f1f1 inset;
+    top: 0.75em;
+    left: 0.75em;
+    width: 1.2em;
+    height: 1.2em;
+  }
+  .search-btn:after {
+    background: #f1f1f1;
+    border-radius: 0 0.25em 0.25em 0;
+    top: 51%;
+    left: 51%;
+    width: 0.75em;
+    height: 0.25em;
+    transform: translate(0.2em, 0) rotate(45deg);
+    transform-origin: 0 50%;
+  }
+  .search-btn span {
+    display: inline-block;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
+  }
+
+  /* Active state */
+  .search-bar input:focus + .search-btn,
+  .search-bar input:valid + .search-btn {
+    background: #2762f3;
+    border-radius: 0 0.375em 0.375em 0;
+    transform: scale(1);
+  }
+  .search-bar input:focus + .search-btn:before,
+  .search-bar input:focus + .search-btn:after,
+  .search-bar input:valid + .search-btn:before,
+  .search-bar input:valid + .search-btn:after {
+    opacity: 1;
+  }
+  .search-bar input:focus + .search-btn:hover,
+  .search-bar input:valid + .search-btn:hover,
+  .search-bar input:valid:not(:focus) + .search-btn:focus {
+    background: #0c48db;
+  }
+  .search-bar input:focus + .search-btn:active,
+  .search-bar input:valid + .search-btn:active {
+    transform: translateY(1px);
+  }
+}
+@media screen and (max-width: 768px) {
+  .Search {
+    width: 75vw;
+    // width: 80vw;
+    input {
+      color: #f1f1f1;
+    }
+    .search-bar input {
+      box-shadow: 0 0 0 0.4em #f1f1f1 inset;
+    }
+    .search-bar input:focus,
+    .search-bar input:valid {
+      background: #3d3d3d;
+      box-shadow: 0 0 0 0.1em #3d3d3d inset;
+    }
+    .search-btn {
+      background: #f1f1f1;
+    }
+  }
+}
+.row-row1 {
+  h1 {
+    margin: 0;
+    font-size: 1.2rem;
+  }
+  h2{
+    font-weight: 300;
+    margin: 0;
+    font-size: .7rem;
+  }
+}
