--- a/styles/global.scss
+++ b/styles/global.scss
@@ -358,7 +358,7 @@
     }
     p {
       margin: 1px;
-      width: 280px;
+      max-width: 280px;
       font-weight: 300;
       font-family: "Poppins", sans-serif;
     }
