--- a/styles/global.scss
+++ b/styles/global.scss
@@ -541,6 +541,7 @@
     border-radius: 0.375em 0 0 0.375em;
     box-shadow: 0 0 0 0.1em #d9d9d9 inset;
     transform: scale(1);
+    display: none;
   }
   .search-btn {
     background: #171717;
